# zero2prod

./: Cargo.toml  Dockerfile  Readme.md  config.toml  sqlx-data.json
.github/workflows/: general.yml
configuration/: config.toml  local.toml  production.toml
migrations/: 20221216145228_make_status_not_null_in_subscriptions.sql  20221222135807_seed_user.sql  20221225085740_create_idempotency_table.sql  20221225114441_relax_null_checks_on_idempotency.sql  20221225140025_create_newsletter_issues_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs  user_password.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  post.rs
templates/: test.html
templates/admin/: dashboard.html
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  newsletters.rs  subscription.rs  subscriptions.rs  subscriptions_confirm.rs
